--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,15 @@ button a{
     padding: 50px;
 }
 
+.box-ins{
+    background-color:#fff ;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    min-height: 350px;
+    width: 640px;
+    padding: 50px;
+}
+
 .title{
     border-bottom: 1px solid #464646;
     color: #464646;
@@ -60,7 +69,7 @@ button a{
     margin: 30px 0;
     grid-gap: 15px;
 }
-.optionBox span{
+.optionBox button{
     background-color: #f0efef;
     border-radius: 10px;
     color: #000;
@@ -114,6 +123,46 @@ button a{
     margin-top:30px;
     display: inline-block;
 }
+
+.corrct{
+    background: #9aeabc;
+}
+
+.incorrect {
+    background: #ff9393;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content { background-color:#fff ;
+    border-radius: 10px;
+    box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
+    min-height: 350px;
+    width: 640px;
+    padding: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+  
 /*Quiz page style end */
 
 /*Landing page changes*/
